# blmesh

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  configure.sh  getLib.bat  test.sh
2dremesh/: CMakeLists.txt  Massage.h  MemoryPool.h  PolyMesh.cpp  PolyMesh.h  PolyMeshIterators.cpp  PolyMeshIterators.h  PolyMesh_Base.cpp  PolyMesh_Base.h  SurfaceRemesh.cpp  SurfaceRemesh.h  Types.h
BLPre/: CMakeLists.txt
BLPre/include/: MeshInfo.h  blpre.h
BLPre/src/: MeshInfo.cpp  main.cpp
DistanceCaculator/: CMakeLists.txt
DistanceCaculator/include/: dataio.h  kdtree.h  scendata.h
DistanceCaculator/src/: dataio.cpp  kdtree.cpp  scendata.cpp
MNormal/: .gitignore  CMakeLists.txt
MNormal/geom/: intersection_func.cpp
MNormal/include/: BoundaryTriangulation.h  MNormalMesh.h  MNormal_API.h  MeshEvaluation.h  PointOptimizer.h  Splitter.h  TopologyOptimizer.h  VirtualSphereMesh.h  VirtualSphereMeshGenerator.h  VirtualSphereMeshStrategy.h  common.h  complexnode.h  geometry_check.hpp  intersection_check.hpp  mostnormaloptimizer.h  singleton.h
MNormal/resource/: logo.txt
MNormal/src/: BLVector.cpp  BoundaryTriangulation.cpp  MNormalMesh.cpp  MNormal_API.cpp  MeshSplitter.cpp  TopologyOptimizer.cpp  VirtualSphereBoundary.cpp  VirtualSphereMesh.cpp  VirtualSphereMeshGenerator.cpp  VirtualSphereMeshHasher.cpp  complexnode.cpp  main.cpp  mergeoptimizer.cpp  mostnormaloptimizer.cpp  pointoptimizer.cpp  sphericalCap.cpp
MeshOrientLib/: CMakeLists.txt
MeshOrientLib/include/: mesh_orient.h  trimesh.h  vector.h
MeshOrientLib/src/: mesh_orient.cpp  trimesh.cpp  vector.cpp
blmesh/: CMakeLists.txt
blmesh/include/: BLDomain.h  BLFront.h  BLFront2D.h  BLFront3D.h  BLFrontList.h  BLLineMesh.h  BLMemory.h  BLMesh.h  BLMesh_define.h  BLMultipole_define.h  BLNode.h  BLVector.h  DynamicArray.h  FMM.h  HeightSmoothingStrategy.h  IterationNormalSmoothStrategy.h  LightMemoryPool.h  NormalSmoothStrategy.h  Octree.h  OctreeAgent.h  PotentialBEM.h  PotentialBEM2D.h  PotentialBEM3D.h  PrismStorehouse.h  SimpleNormalSmoothStrategy.h  VirtualMesh.h  VoronoiNormalSmoothStrategy.h  WangzhiNormalSmoothStrategy.h  algebra.h  blmeshapi.h  common.h  coord.h  distancecalculation.h  genmesh2d.h  geom_func.h  mesh_orient.h  singlesymmetry.h  sphericalvoronoigeometry.h  symmetry.h
blmesh/src/: BLDomain.cpp  BLFront.cpp  BLFront2D.cpp  BLFront3D.cpp  BLFrontList.cpp  BLLineMesh.cpp  BLMesh.cpp  BLMultipole_define.cpp  BLNode.cpp  BLVector.cpp  DynamicArray.cpp  FMM.cpp  HeightSmoothingStrategy.cpp  IterationNormalSmoothStrategy.cpp  LightMemoryPool.cpp  NormalSmoothStrategy.cpp  Octree.cpp  OctreeAgent.cpp  PotentialBEM.cpp  PotentialBEM2D.cpp  PotentialBEM3D.cpp  PrismStorehouse.cpp  SimpleNormalSmoothStrategy.cpp  VirtualMesh.cpp  VoronoiNormalSmoothStrategy.cpp  WangzhiNormalSmoothStrategy.cpp  algebra.cpp  binary_tree.hpp  blmeshapi.cpp  coord.cpp  distancecalculation.cpp  main.cpp  symmetry.cpp
create_sol/: CMakeLists.txt  bkmeshimpl.cpp  bkmeshimpl.h  createsol.cpp  createsol.h  vector_own.cpp  vector_own.h
dtiso3d/: .gitignore  CMakeLists.txt  README.md
dtiso3d/document/: index.hhc  index.hhk  index.hhp  menudata.js  tiger__volmtetrahedralizer2_8h.html  tiger__volmtetrahedralizer2_8h_source.html  tiger_volmtetrahedralizer2.chm
dtiso3d/dtiso3d/: CMakeLists.txt  ComputInfo.cpp  HardDriveSerialNumer.cpp  Iso3D_Main.cpp  LiCheck.cpp  SmeshImprover.h  blockedarray_instance.cpp  blockedarray_instance.h  earremoval.cpp  earremoval.h  fileio.h  iso3d.cpp  iso3d.h  iso3d_common.cpp  iso3d_common.h  iso3d_define.h  iso3d_error.cpp  iso3d_error.h  iso3d_libmain.cpp  iso3d_multidomain.cpp  iso3d_multidomain.h  iso3d_sizingapi.cpp  iso3d_utility.cpp  iso3d_utility.h  locsmoothing.cpp  locsmoothing.h  matrix.cpp  matrix.h  md5.cpp  mshgen3d_def.h  optdihangle.cpp  singleton.h  skirtpolylist.cpp  skirtpolylist.h  solvezone.cpp  solvezone.h  space.cpp  space.h  stacksrch.h  tetramesh.cpp  (+9 more)
dtiso3d/dtiso3d/tools/: EdgeGrapher.h
dtiso3d/geom/: CMakeLists.txt  geom_func.cpp  geom_func.h  intersection_func.cpp  predicates.c
dtiso3d/meshmetric/: MeshMetric_dll.h
dtiso3d/spr/: CMakeLists.txt  IntIntMap.cpp  IntStack.cpp  SPR.cpp  celltopology.cpp  celltopology.h  gridedgehash.cpp  instentlist.cpp  instentlist.h  myvector.h  spr.h
dtiso3d/third/mmg/: CMakeLists.txt
dtiso3d/third/tetgen/: CMakeLists.txt  predicates.cxx  tetgen.cpp  tetgen.h
postprocess/: CMakeLists.txt  postprocess.cpp  postprocess.h
third/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
tiger-sizeingfunc/: CMakeLists.txt  bkmeshimpl.cpp  bkmeshimpl.h  createsol.cpp  createsol.h  inputdata.cpp  inputdata.h  main_copy.cpp  testaabbtree.cpp  tiger_sizingfunction.cpp  tiger_sizingfunction.h  vector_own.cpp  vector_own.h
tiger-sizeingfunc/eigen-3.3.7/bench/: analyze-blocking-sizes.cpp  basicbenchmark.cpp  benchBlasGemm.cpp  benchCholesky.cpp  benchEigenSolver.cpp  benchFFT.cpp  benchGeometry.cpp  benchVecAdd.cpp  bench_gemm.cpp  bench_norm.cpp  bench_reverse.cpp  bench_sum.cpp  benchmark-blocking-sizes.cpp  benchmark.cpp  benchmarkSlice.cpp  benchmarkX.cpp  benchmarkXcwise.cpp  check_cache_queries.cpp  dense_solvers.cpp  eig33.cpp  geometry.cpp  product_threshold.cpp  quat_slerp.cpp  quatmul.cpp  sparse_cholesky.cpp  sparse_dense_product.cpp  sparse_lu.cpp  sparse_product.cpp  sparse_randomsetter.cpp  sparse_setter.cpp  sparse_transpose.cpp  sparse_trisolver.cpp  spmv.cpp  vdw_new.cpp
tiger-sizeingfunc/eigen-3.3.7/blas/: complex_double.cpp  complex_single.cpp  double.cpp  (+2 more)
verdict/: CMakeLists.txt  README  V_EdgeMetric.cpp  V_GaussIntegration.cpp  V_GaussIntegration.hpp  V_HexMetric.cpp  V_KnifeMetric.cpp  V_PrismMetric.cpp  V_PyramidMetric.cpp  V_QuadMetric.cpp  V_TetMetric.cpp  V_TriMetric.cpp  V_WedgeMetric.cpp  Verdict.htm  VerdictVector.cpp  VerdictVector.hpp  verdict.h  verdict_config.h  verdict_defines.hpp
vmesh/: CMakeLists.txt
vmesh/include/: Config.h  test_postprocess_vol.h  tiger_sizingfunction.h  tiger_sizingsmoother.h  vmesh.h
vmesh/src/: Config.cpp  main.cpp  vmesh.cpp
vmesh/testcase/: shelltest.pl2
(+783 files in other folders)
