cmake_minimum_required (VERSION 3.30) 
project(blmesh)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if (MSVC)
    # 对于MSVC编译器，可以禁用所有警告
    add_compile_options(/W0 /utf-8)
elseif (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    # 对于GNU编译器，可以使用 -w 参数来关闭所有警告
    add_compile_options(-w)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    # 对于Clang编译器，可以使用 -Wno-all 来关闭所有警告
    add_compile_options(-Wno-all)
endif()

MESSAGE(STATUS "###################################")
MESSAGE("CMake config files are written by hongfei Ye")
MESSAGE("Config bug report: hfye@zju.edu.cn")


FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OpenMP found")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/lib)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/lib)
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX14)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
if(NOT MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
endif()
set(CMAKE_DEBUG_POSTFIX "_d")
set(CMAKE_RELEASE_POSTFIX "_r")
set(CMAKE_RELWITHDEBINFO_POSTFIX "_r")
option(build_test "build google test" ON)


IF(CMAKE_COMPILER_IS_GNUCXX)
        ADD_COMPILE_OPTIONS(-fPIC)
        MESSAGE(STATUS "optional:-fPIC")   
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

# 设置stack commit size.    (stack reserve size? How)
# 只在 Windows 上设置栈大小；Linux/Unix 不要碰
if(WIN32)
  if(MSVC)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:200000000")
  elseif(MINGW)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--stack,200000000")
  endif()
endif()


IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
add_definitions(
	-DUNICODE
)
ENDIF () 


get_directory_property(hasParent PARENT_DIRECTORY)

if(EXISTS ${CMAKE_SOURCE_DIR}/extern)
include_directories(${CMAKE_SOURCE_DIR}/extern/libigl/include)
include_directories(${CMAKE_SOURCE_DIR}/extern/eigen)
include_directories(${CMAKE_SOURCE_DIR}/extern/spdlog/include)
include_directories(${CMAKE_SOURCE_DIR}/extern/cli11)
include_directories(${CMAKE_SOURCE_DIR}/extern/geogram/src/lib)
endif()

include_directories(${CMAKE_SOURCE_DIR}/third/libigl/include)
include_directories(${CMAKE_SOURCE_DIR}/third/eigen)
include_directories(${CMAKE_SOURCE_DIR}/third/spdlog/include)
include_directories(${CMAKE_SOURCE_DIR}/third/cli11)

if(hasParent)
include_directories(${CMAKE_SOURCE_DIR}/extern/libigl/include)
include_directories(${CMAKE_SOURCE_DIR}/extern/googletest/googletest/include)
include_directories(${CMAKE_SOURCE_DIR}/extern/eigen)
include_directories(${CMAKE_SOURCE_DIR}/extern/triangle)
include_directories(${CMAKE_SOURCE_DIR}/extern/spdlog/include)
include_directories(${CMAKE_SOURCE_DIR}/extern/cli11)
include_directories(${CMAKE_SOURCE_DIR}/extern/geogram/src/lib)
message("use TiGER library=${hasParent}/third_party/eigen")
endif()
#link_directories(${PROJECT_SOURCE_DIR}/lib)
add_subdirectory(third/triangle)
add_subdirectory(DistanceCaculator)
add_subdirectory(dtiso3d)
add_subdirectory(dtiso2d)
add_subdirectory(MNormal)
add_subdirectory(postprocess)
add_subdirectory(MeshOrientLib)
add_subdirectory(BLPre)
add_subdirectory(blmesh)
#add_subdirectory(tiger-sizeingfunc)
add_subdirectory(2dremesh)
add_subdirectory(vmesh)
#add_subdirectory(create_sol)

#install to a target 
set(header vmesh/include/vmesh.h)
set(target_lib libverdict vmesh libblmesh tetgen triangle 2dremesh blpre libdtiso3d libdtiso2d libgeom meshOrientLib libspr libMeshChamfer DistanceCaculator libpostprocess)
set(target_bin blmesh dtiso3d)
get_directory_property(hasParent PARENT_DIRECTORY)
# if(hasParent)
# set(include_dest ${hasParent}/include)
# set(lib_dest ${hasParent}/lib)
# set(bin_dest ${hasParent}/bin)
# message("the include path =${include_dest}")
# install(FILES ${header} DESTINATION "${include_dest}")
# install(TARGETS ${target_lib} DESTINATION "${lib_dest}")
# install(TARGETS ${target_bin} DESTINATION "${bin_dest}")
# endif() 
